Migrated from Springboot to Quarkus